
```
Potato game tracks scoreboard for each user and stores, 
an user has a table for session history how many spins
they spent on each session and tracks:

- Highest value
- Total bets 
- Biggest loss
- Biggest win
```

Table player {
  id integer [primary key]
  name varchar notNull
  current_balance integer notNull
  current_balance integer
}

Table session {
  id integer [primary key]
  current_balance integer
  top_amount integer
  biggest_loss integer
  biggest_win integer
  highest_bet integer
  player_id integer
}

Table player_session{
  id [primary key]
  player_id [ref:> player.id]
  session_id [ref:> session.id]
}

